Think I fixed the row widths on mobile

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -139,6 +139,7 @@ body {
 
   .row {
     margin: 0 auto;
+    width: 750px;
   }
 }
 
